# CMakeTraining

./: CMakeLists.txt  main.cpp
MultiDimensionalDynamicArray/: CMakeLists.txt
MultiDimensionalDynamicArray/include/: MultiDimensionalDynamicArray.h
MultiDimensionalDynamicArray/src/: MultiDimensionalDynamicArray.cpp
